--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href="images/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+<script 
+  async 
+  defer 
+  crossorigin="anonymous" 
+  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0">
+</script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
